<resources>
    <string name="app_name">Plant</string>

    <!-- AUTHENTICATION -->
    <string name="title_app">Plant App</string>

    <!-- AUTHENTICATION FIELD -->
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="username">Nama Pengguna</string>
    <string name="mobile_number">Nomor Telepon</string>

    <!-- LOGIN FRAGMENT -->
    <string name="google">Google</string>
    <string name="or">Or</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="login">Masuk</string>
    <string name="don_t_have_account">Tidak memiliki akun?</string>
    <string name="register_now">Daftar Sekarang</string>

    <!-- REGISTER FRAGMENT -->
    <string name="register">Daftar</string>
    <string name="already_have_account">Sudah mempunyai akun?</string>

    <!-- EMPTY FIELD -->
    <string name="invalid_email">Email tidak valid</string>
    <string name="field_required">Wajib diisi</string>

    <!-- FORGOT PASSWORD -->
    <string name="forgot_password_title">Lupa Kata Sandi</string>
    <string name="tv_description_forgot_password">Silakan masukkan email Anda yang terdaftar untuk mengatur ulang kata sandi Anda.</string>
    <string name="recover_password">Pulihkan Kata Sandi</string>
    <string name="send_instruction_message">Instruksi telah dikirim ke email %s</string>

    <!-- ACTIVITY MAIN -->
    <string name="title_header">Ayo temukan tanaman favoritmu</string>
    <string name="search_hint">Mau cari tanaman apa?</string>
    <string name="image_profile">image profile</string>
    <string name="welcome_back">Selamat datang kembali,</string>

    <!-- CONTENT DESCRIPTION -->
    <string name="plant_image">plant image</string>
    <string name="google_icon">google icon</string>
    <string name="logo">Logo</string>
    <string name="plant_name">Nama Tanaman Herbal</string>
    <string name="plant_description">Manfaat Tanaman</string>
    <string name="image_back">back</string>

    <!-- SMS RECEIVER -->
    <string name="coming_from">Coming From %s</string>
    <string name="message">Message</string>
    <string name="oke">Oke</string>
    <string name="successfully_message">Anda telah berhasil mendaftar pada Plant App. Terimakasih</string>

    <!-- PROFILE ACTIVITY -->
    <string name="log_out">Keluar</string>
    <string name="logout_message">Apakah Anda ingin Keluar?</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>

    <!-- EDIT PROFILE ACTIVITY -->
    <string name="bio">Bio</string>
    <string name="bio_hint">Tambahkan bio ke profil Anda</string>
    <string name="edit">Edit</string>
    <string name="bio_successfully_deleted">Bio telah dihapus</string>
    <string name="bio_successfully_updated">Bio berhasil diupdate</string>
    <string name="bio_failed_updated">Bio gagal di update</string>
    <string name="bio_successfully_created">Bio berhasil dibuat</string>
    <string name="update">Update</string>
    <string name="save">Simpan</string>
</resources>