<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.content.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_plant"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/plant_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <View
            android:id="@+id/view_action_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/action_button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_back"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/view_action_back"
            app:layout_constraintEnd_toEndOf="@+id/view_action_back"
            app:layout_constraintStart_toStartOf="@+id/view_action_back"
            app:layout_constraintTop_toTopOf="@+id/view_action_back" />

        <View
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_half_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_plant" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="35dp"
            android:layout_height="5dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_shape"
            android:backgroundTint="@color/primary_color"
            app:layout_constraintEnd_toEndOf="@+id/view_background"
            app:layout_constraintStart_toStartOf="@+id/view_background"
            app:layout_constraintTop_toTopOf="@+id/view_background" />

        <TextView
            android:id="@+id/tv_title_plant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/plant_name"
            android:textColor="@color/title_text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider" />

        <TextView
            android:id="@+id/tv_plant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#757575"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_plant_name"
            app:layout_constraintStart_toStartOf="@+id/tv_title_plant_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_plant_name"
            tools:text="Lorem Ipsum" />

        <TextView
            android:id="@+id/tv_title_plant_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/plant_description"
            android:textColor="@color/title_text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plant_name" />

        <TextView
            android:id="@+id/tv_plant_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#757575"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_plant_description"
            app:layout_constraintStart_toStartOf="@+id/tv_title_plant_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_plant_description"
            tools:text="Lorem Ipsum" />

        <include
            android:id="@+id/loading"
            layout="@layout/custom_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>